App icon & font

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -39,7 +39,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/arbutus"
+        android:fontFamily="@font/concert_one"
         android:text="Enter your email account"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
@@ -54,16 +54,16 @@
         android:layout_width="335dp"
         android:layout_height="48dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="12dp"
-        android:fontFamily="@font/arbutus"
+        android:ems="10"
+        android:fontFamily="@font/concert_one"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColorHint="#4E342E"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -73,6 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:fontFamily="@font/concert_one"
         android:text="Link Send"
         app:layout_constraintEnd_toEndOf="@+id/emailForgotPass"
         app:layout_constraintHorizontal_bias="0.103"
@@ -84,6 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:fontFamily="@font/concert_one"
         android:text="Cancel"
         app:layout_constraintEnd_toEndOf="@+id/emailForgotPass"
         app:layout_constraintHorizontal_bias="0.825"
