--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,7 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:focusableInTouchMode="true"
-                android:fontFamily="@font/arbutus_regular"
+                android:fontFamily="@font/concert_one"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -139,7 +139,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:focusableInTouchMode="true"
-                android:fontFamily="@font/arbutus_regular"
+                android:fontFamily="@font/concert_one"
                 android:includeFontPadding="false"
                 android:inputType="textPassword"
                 android:paddingBottom="10dp"
@@ -168,7 +168,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="@drawable/bg_login"
-            android:fontFamily="@font/arbutus_regular"
+            android:fontFamily="@font/concert_one"
             android:text="Log In"
             app:backgroundTint="#F4A022"
             app:layout_constraintBottom_toTopOf="@+id/button_forgetpass"
@@ -182,7 +182,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:fontFamily="@font/arbutus_regular"
+            android:fontFamily="@font/concert_one"
             android:shadowColor="#000000"
             android:shadowDx="1.5"
             android:shadowDy="1.5"
@@ -212,7 +212,7 @@
                 android:id="@+id/textview_registerdesc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/arbutus_regular"
+                android:fontFamily="@font/concert_one"
                 android:shadowColor="#A3A3A3"
                 android:shadowDx="1"
                 android:shadowRadius="1"
@@ -223,7 +223,7 @@
                 android:id="@+id/button_Login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/arbutus_regular"
+                android:fontFamily="@font/concert_one"
                 android:shadowColor="#000000"
                 android:shadowDx="1.5"
                 android:shadowDy="1.5"
