--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,16 +39,16 @@
         android:id="@+id/edittext_email1"
         android:layout_width="327dp"
         android:layout_height="48dp"
-        android:ems="10"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="12dp"
-        android:fontFamily="@font/arbutus"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
+        android:ems="10"
+        android:fontFamily="@font/concert_one"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:textColorHint="#4E342E"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
@@ -59,16 +59,16 @@
         android:layout_width="327dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
+        android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="12dp"
-        android:background="@drawable/custom_input"
-        android:fontFamily="@font/arbutus"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
+        android:ems="10"
+        android:fontFamily="@font/concert_one"
         android:hint="Full Name"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:textColorHint="#4E342E"
         app:layout_constraintEnd_toEndOf="@+id/edittext_email1"
         app:layout_constraintStart_toStartOf="@+id/edittext_email1"
@@ -79,16 +79,16 @@
         android:layout_width="327dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
-        android:fontFamily="@font/arbutus"
-        android:textColorHint="#4E342E"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
+        android:ems="10"
+        android:fontFamily="@font/concert_one"
         android:hint="Confirm Password"
         android:inputType="textPassword"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:textColorHint="#4E342E"
         app:layout_constraintEnd_toEndOf="@+id/passwordRegister"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/passwordRegister"
@@ -99,16 +99,16 @@
         android:layout_width="327dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
-        android:fontFamily="@font/arbutus"
+        android:ems="10"
+        android:fontFamily="@font/concert_one"
+        android:hint="Password"
+        android:inputType="textPassword"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
-        android:hint="Password"
         android:textColorHint="#4E342E"
-        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/fullNameRegister"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/fullNameRegister"
@@ -134,9 +134,9 @@
         android:id="@+id/textview_registerdesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="28dp"
-        android:fontFamily="@font/arbutus"
+        android:fontFamily="@font/concert_one"
         android:text="Already have an account?"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/edittext_password1"
@@ -148,7 +148,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
-        android:fontFamily="@font/arbutus"
+        android:fontFamily="@font/concert_one"
         android:text="LogIn Now"
         android:textColor="@android:color/holo_orange_light"
         app:layout_constraintEnd_toEndOf="@+id/edittext_password1"
