--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -8,10 +8,10 @@
         android:id="@+id/textView"
         android:layout_width="356dp"
         android:layout_height="126dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/box"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +32,8 @@
         android:layout_width="227dp"
         android:layout_height="27dp"
         android:layout_marginEnd="16dp"
-        android:text="Daniel Balberde"
+        android:fontFamily="@font/concert_one"
+        android:hint="Loading..."
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
@@ -46,6 +47,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/button"
+        android:fontFamily="@font/concert_one"
         android:text="Save Watchlist"
         android:textColor="#000000"
         app:backgroundTint="@color/white"
@@ -58,13 +60,15 @@
         android:id="@+id/button_history"
         android:layout_width="332dp"
         android:layout_height="61dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/button"
+        android:fontFamily="@font/concert_one"
         android:strokeColor="@color/black"
         android:text="History"
         android:textColor="#000000"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:strokeColor="@color/black"
@@ -76,6 +80,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/button"
+        android:fontFamily="@font/concert_one"
         android:text="Download"
         android:textColor="#000000"
         app:backgroundTint="@color/white"
@@ -90,6 +95,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/button"
+        android:fontFamily="@font/concert_one"
         android:text="Setting"
         android:textColor="#000000"
         app:backgroundTint="@color/white"
@@ -104,6 +110,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/button"
+        android:fontFamily="@font/concert_one"
         android:text="About"
         android:textColor="#000000"
         app:backgroundTint="@color/white"
@@ -118,6 +125,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/button"
+        android:fontFamily="@font/concert_one"
         android:text="Logout"
         android:textColor="#000000"
         app:backgroundTint="@color/white"
