Forgot Password and Change Password

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -70,27 +70,28 @@
 
     <Button
         android:id="@+id/linkSendBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_width="182dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/concert_one"
-        android:text="Link Send"
+        android:text="Reset Password"
+        android:background="@drawable/button"
         app:layout_constraintEnd_toEndOf="@+id/emailForgotPass"
-        app:layout_constraintHorizontal_bias="0.103"
+        app:layout_constraintHorizontal_bias="0.528"
         app:layout_constraintStart_toStartOf="@+id/emailForgotPass"
         app:layout_constraintTop_toBottomOf="@+id/emailForgotPass" />
 
     <Button
         android:id="@+id/logInForgotPassBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_width="182dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/concert_one"
         android:text="Cancel"
-        app:layout_constraintEnd_toEndOf="@+id/emailForgotPass"
-        app:layout_constraintHorizontal_bias="0.825"
-        app:layout_constraintStart_toStartOf="@+id/emailForgotPass"
-        app:layout_constraintTop_toBottomOf="@+id/emailForgotPass" />
+        android:background="@drawable/button"
+        app:layout_constraintEnd_toEndOf="@+id/linkSendBtn"
+        app:layout_constraintStart_toStartOf="@+id/linkSendBtn"
+        app:layout_constraintTop_toBottomOf="@+id/linkSendBtn" />
 
     <ImageView
         android:id="@+id/imageView3"
