--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/container_id">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/textView"
@@ -41,98 +43,108 @@
         app:layout_constraintStart_toEndOf="@+id/imageview_picture"
         app:layout_constraintTop_toTopOf="@+id/textView" />
 
-    <Button
-        android:id="@+id/button_watchlist"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/button"
-        android:fontFamily="@font/concert_one"
-        android:text="Save Watchlist"
-        android:textColor="#000000"
-        app:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/button_history"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button_history"
-        app:layout_constraintTop_toBottomOf="@+id/button_history" />
+
+<!--    <Button-->
+<!--        android:id="@+id/button_history"-->
+<!--        android:layout_width="332dp"-->
+<!--        android:layout_height="61dp"-->
+<!--        android:layout_marginTop="84dp"-->
+<!--        android:background="@drawable/button"-->
+<!--        android:fontFamily="@font/concert_one"-->
+<!--        android:strokeColor="@color/black"-->
+<!--        android:text="History"-->
+<!--        android:textColor="#000000"-->
+<!--        app:backgroundTint="@color/white"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/textView"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/textView"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
+<!--        app:strokeColor="@color/black"-->
+<!--        app:strokeWidth="10dp" />-->
+
 
     <Button
-        android:id="@+id/button_history"
-        android:layout_width="332dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/button"
-        android:fontFamily="@font/concert_one"
-        android:strokeColor="@color/black"
+        android:id="@+id/btn_History"
+        android:layout_width="189dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
         android:text="History"
-        android:textColor="#000000"
-        app:backgroundTint="@color/white"
+        android:background="@drawable/button"
+        android:fontFamily="@font/concert_one"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:strokeColor="@color/black"
-        app:strokeWidth="10dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button_download"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="8dp"
+        android:id="@+id/btn_Save_Watch_List"
+        android:layout_width="189dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:text="Save Watch List"
         android:background="@drawable/button"
         android:fontFamily="@font/concert_one"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/btn_History"
+        app:layout_constraintStart_toStartOf="@+id/btn_History"
+        app:layout_constraintTop_toBottomOf="@+id/btn_History" />
+
+    <Button
+        android:id="@+id/btn_Download"
+        android:layout_width="189dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
         android:text="Download"
-        android:textColor="#000000"
-        app:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/button_watchlist"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button_watchlist"
-        app:layout_constraintTop_toBottomOf="@+id/button_watchlist" />
-
-    <Button
-        android:id="@+id/button_setting"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/button"
         android:fontFamily="@font/concert_one"
-        android:text="Setting"
-        android:textColor="#000000"
-        app:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/button_download"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button_download"
-        app:layout_constraintTop_toBottomOf="@+id/button_download" />
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Save_Watch_List"
+        app:layout_constraintStart_toStartOf="@+id/btn_Save_Watch_List"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Save_Watch_List" />
 
     <Button
-        android:id="@+id/button_about"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="8dp"
+        android:id="@+id/btn_Settings"
+        android:layout_width="189dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:text="Settings"
         android:background="@drawable/button"
         android:fontFamily="@font/concert_one"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Download"
+        app:layout_constraintStart_toStartOf="@+id/btn_Download"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Download" />
+
+    <Button
+        android:id="@+id/btn_About"
+        android:layout_width="189dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
         android:text="About"
-        android:textColor="#000000"
-        app:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/button_setting"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button_setting"
-        app:layout_constraintTop_toBottomOf="@+id/button_setting" />
-
-    <Button
-        android:id="@+id/button_logout"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/button"
         android:fontFamily="@font/concert_one"
-        android:text="Logout"
-        android:textColor="#000000"
-        app:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/button_about"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button_about"
-        app:layout_constraintTop_toBottomOf="@+id/button_about" />
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Download"
+        app:layout_constraintStart_toStartOf="@+id/btn_Download"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Settings" />
+
+    <Button
+        android:id="@+id/btn_LogOut"
+        android:layout_width="189dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:text="Log Out"
+        android:background="@drawable/button"
+        android:fontFamily="@font/concert_one"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/btn_About"
+        app:layout_constraintStart_toStartOf="@+id/btn_About"
+        app:layout_constraintTop_toBottomOf="@+id/btn_About" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
