--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -109,11 +109,11 @@
         android:layout_width="189dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:text="Settings"
         android:background="@drawable/button"
-        android:fontFamily="@font/concert_one"
-        android:textColor="@color/white"
         android:backgroundTint="@color/white"
+        android:fontFamily="@font/concert_one"
+        android:text="Account Settings"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btn_Download"
         app:layout_constraintStart_toStartOf="@+id/btn_Download"
         app:layout_constraintTop_toBottomOf="@+id/btn_Download" />
