--- a/app/src/main/res/layout/fragment_settings_activity.xml
+++ b/app/src/main/res/layout/fragment_settings_activity.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="700dp"
     tools:context=".SettingsActivity">
+
+
+
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical"
-        android:background="@color/white">
+        >
+
 
         <RelativeLayout
             android:id="@+id/RL_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="100dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
-            android:padding="15dp"
-            android:background="@drawable/box">
+            android:background="@drawable/box"
+            android:padding="15dp">
 
             <TextView
                 android:id="@+id/textView_update_email_head"
@@ -67,10 +74,10 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:padding="15dp"
             android:layout_below="@id/RL_email"
-            android:background="@drawable/box">
+            android:layout_margin="15dp"
+            android:background="@drawable/box"
+            android:padding="15dp">
 
             <TextView
                 android:id="@+id/textView_update_pwd_authenticated"
@@ -136,45 +143,8 @@
                 android:text="Change Password" />
 
         </RelativeLayout>
+
     </LinearLayout>
 
-
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/textView4"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginTop="64dp"-->
-    <!--        android:fontFamily="@font/concert_one"-->
-    <!--        android:text="You can change you password now. Please enter your password and verify before continuing."-->
-    <!--        android:textAlignment="center"-->
-    <!--        android:textColor="#000000"-->
-    <!--        android:textSize="20sp"-->
-    <!--        app:layout_constraintEnd_toEndOf="@+id/textView6"-->
-    <!--        app:layout_constraintHorizontal_bias="0.0"-->
-    <!--        app:layout_constraintStart_toStartOf="@+id/imageView4"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/textView6" />-->
-
-    <!--    <ImageView-->
-    <!--        android:id="@+id/imageView4"-->
-    <!--        android:layout_width="186dp"-->
-    <!--        android:layout_height="147dp"-->
-    <!--        android:src="@drawable/logo_3"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/textView6"-->
-    <!--        android:layout_width="171dp"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:layout_marginTop="52dp"-->
-    <!--        android:fontFamily="@font/concert_one"-->
-    <!--        android:text="Account"-->
-    <!--        android:textColor="#000000"-->
-    <!--        android:textSize="48sp"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.453"-->
-    <!--        app:layout_constraintStart_toEndOf="@+id/imageView4"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
 </ScrollView>
