--- a/app/src/main/res/layout/change_password_activity.xml
+++ b/app/src/main/res/layout/change_password_activity.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="vertical"
+        android:layout_marginTop="30dp"
         >
 
 
@@ -33,6 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
+                android:fontFamily="@font/concert_one"
                 android:text="You can change your password now. Please enter your password and verify before continuing."
                 android:textAlignment="center"
                 android:textSize="16sp" />
@@ -43,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView_update_email_head"
                 android:layout_marginTop="50dp"
+                android:fontFamily="@font/concert_one"
                 android:padding="6dp"
                 android:text="Current Password"
                 android:textSize="16sp" />
@@ -53,11 +56,12 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textView_delete_user_pwd_current"
                 android:background="@drawable/box"
+                android:fontFamily="@font/concert_one"
                 android:hint="Enter your password"
                 android:inputType="textPassword"
                 android:minHeight="48dp"
                 android:padding="10dp"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/button_authenticate_delete_user"
@@ -67,7 +71,10 @@
                 android:layout_marginLeft="70dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="70dp"
-                android:text="Authenticate" />
+                android:background="@drawable/button"
+                android:fontFamily="@font/concert_one"
+                android:text="Authenticate"
+                android:textSize="16sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -83,6 +90,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:fontFamily="@font/concert_one"
                 android:padding="6dp"
                 android:text="Your profile is not authenticated/verified yet!"
                 android:textSize="16sp" />
@@ -93,6 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textView_delete_user_authenticated"
                 android:layout_marginTop="10dp"
+                android:fontFamily="@font/concert_one"
                 android:padding="6dp"
                 android:text="New Password"
                 android:textSize="16sp" />
@@ -103,11 +112,12 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textView_change_pwd_new"
                 android:background="@drawable/box"
+                android:fontFamily="@font/concert_one"
                 android:hint="Enter your new password"
                 android:inputType="textPassword"
                 android:minHeight="48dp"
                 android:padding="10dp"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textView_change_pwd_new_confirm"
@@ -115,6 +125,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/editText_change_pwd_new"
                 android:layout_marginTop="10dp"
+                android:fontFamily="@font/concert_one"
                 android:padding="6dp"
                 android:text="New Password"
                 android:textSize="16sp" />
@@ -125,11 +136,12 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textView_change_pwd_new_confirm"
                 android:background="@drawable/box"
+                android:fontFamily="@font/concert_one"
                 android:hint="Enter your new password"
                 android:inputType="textPassword"
                 android:minHeight="48dp"
                 android:padding="10dp"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/button_delete_user"
@@ -139,7 +151,10 @@
                 android:layout_marginLeft="70dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="70dp"
-                android:text="Change Password" />
+                android:background="@drawable/button"
+                android:fontFamily="@font/concert_one"
+                android:text="Change Password"
+                android:textSize="16sp" />
 
         </RelativeLayout>
 
