--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -67,11 +67,11 @@
         android:layout_width="189dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:text="History"
-        android:background="@drawable/button"
+        android:background="@drawable/bg_login"
+        app:backgroundTint="#F4A022"
         android:fontFamily="@font/concert_one"
+        android:text="History"
         android:textColor="@color/white"
-        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -81,11 +81,11 @@
         android:layout_width="189dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:text="Save Watch List"
         android:background="@drawable/button"
+        app:backgroundTint="#F4A022"
         android:fontFamily="@font/concert_one"
+        android:text="Save Watch List"
         android:textColor="@color/white"
-        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btn_History"
         app:layout_constraintStart_toStartOf="@+id/btn_History"
         app:layout_constraintTop_toBottomOf="@+id/btn_History" />
@@ -95,11 +95,11 @@
         android:layout_width="189dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:text="Download"
         android:background="@drawable/button"
+        app:backgroundTint="#F4A022"
         android:fontFamily="@font/concert_one"
+        android:text="Download"
         android:textColor="@color/white"
-        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btn_Save_Watch_List"
         app:layout_constraintStart_toStartOf="@+id/btn_Save_Watch_List"
         app:layout_constraintTop_toBottomOf="@+id/btn_Save_Watch_List" />
@@ -110,7 +110,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button"
-        android:backgroundTint="@color/white"
+        app:backgroundTint="#F4A022"
         android:fontFamily="@font/concert_one"
         android:text="Account Settings"
         android:textColor="@color/white"
@@ -123,11 +123,11 @@
         android:layout_width="189dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:text="About"
         android:background="@drawable/button"
+        app:backgroundTint="#F4A022"
         android:fontFamily="@font/concert_one"
+        android:text="About"
         android:textColor="@color/white"
-        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btn_Download"
         app:layout_constraintStart_toStartOf="@+id/btn_Download"
         app:layout_constraintTop_toBottomOf="@+id/btn_Settings" />
@@ -137,11 +137,11 @@
         android:layout_width="189dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:text="Log Out"
         android:background="@drawable/button"
+        app:backgroundTint="#F4A022"
         android:fontFamily="@font/concert_one"
+        android:text="Log Out"
         android:textColor="@color/white"
-        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btn_About"
         app:layout_constraintStart_toStartOf="@+id/btn_About"
         app:layout_constraintTop_toBottomOf="@+id/btn_About" />
