--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,17 @@
     android:background="@drawable/bg_2"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:id="@+id/imageview_background"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bg_2" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
@@ -124,7 +135,7 @@
             app:expandedHintEnabled="true"
             app:hintAnimationEnabled="true"
             app:hintEnabled="true"
-            app:layout_constraintBottom_toTopOf="@+id/button_Register"
+            app:layout_constraintBottom_toTopOf="@+id/button_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline_input_right"
             app:layout_constraintHorizontal_bias="0.5"
@@ -163,7 +174,7 @@
             app:layout_constraintGuide_percent="0.70" />
 
         <Button
-            android:id="@+id/button_Register"
+            android:id="@+id/button_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -193,7 +204,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline_button_right"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/guideline_button_left"
-            app:layout_constraintTop_toBottomOf="@+id/button_Register" />
+            app:layout_constraintTop_toBottomOf="@+id/button_login" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
