--- a/app/src/main/res/layout/item_zumba.xml
+++ b/app/src/main/res/layout/item_zumba.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="235dp"
     app:cardCornerRadius="4dp"
     app:cardElevation="4dp"
     app:contentPadding="10dp">
@@ -25,7 +25,7 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@id/guideline4"
@@ -41,7 +41,7 @@
                 android:gravity="center_vertical"
                 android:paddingStart="4dp"
                 android:paddingEnd="4dp"
-                android:text="TextView"
+                android:text="Title"
                 android:textColor="#000000"
                 android:textSize="18sp" />
 
@@ -62,7 +62,7 @@
             android:layout_marginBottom="4dp"
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
-            android:text="TextView"
+            android:text="Category"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,14 +74,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.65" />
+            app:layout_constraintGuide_percent="0.70" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.85" />
+            app:layout_constraintGuide_percent="0.90" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
