--- a/app/src/main/res/layout/fragment_settings_activity.xml
+++ b/app/src/main/res/layout/fragment_settings_activity.xml
@@ -19,12 +19,12 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/concert_one"
-        android:text="Account Settings"
-        android:textSize="24sp"
+        android:text="Account"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,4 +54,16 @@
         app:layout_constraintEnd_toEndOf="@+id/btnChangePwd"
         app:layout_constraintStart_toStartOf="@+id/btnChangePwd"
         app:layout_constraintTop_toBottomOf="@+id/btnChangePwd" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/concert_one"
+        android:text="Settings"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
