--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -66,12 +66,12 @@
         android:id="@+id/btn_History"
         android:layout_width="189dp"
         android:layout_height="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/bg_login"
-        app:backgroundTint="#F4A022"
         android:fontFamily="@font/concert_one"
         android:text="History"
         android:textColor="@color/white"
+        app:backgroundTint="#F4A022"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -82,10 +82,10 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button"
-        app:backgroundTint="#F4A022"
         android:fontFamily="@font/concert_one"
-        android:text="Save Watch List"
+        android:text="Watchlist"
         android:textColor="@color/white"
+        app:backgroundTint="#F4A022"
         app:layout_constraintEnd_toEndOf="@+id/btn_History"
         app:layout_constraintStart_toStartOf="@+id/btn_History"
         app:layout_constraintTop_toBottomOf="@+id/btn_History" />
@@ -110,10 +110,10 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button"
-        app:backgroundTint="#F4A022"
         android:fontFamily="@font/concert_one"
-        android:text="Account Settings"
+        android:text="Settings"
         android:textColor="@color/white"
+        app:backgroundTint="#F4A022"
         app:layout_constraintEnd_toEndOf="@+id/btn_Download"
         app:layout_constraintStart_toStartOf="@+id/btn_Download"
         app:layout_constraintTop_toBottomOf="@+id/btn_Download" />
