--- a/app/src/main/res/layout/fragment_watchlist.xml
+++ b/app/src/main/res/layout/fragment_watchlist.xml
@@ -8,11 +8,12 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="179dp"
-        android:layout_height="179dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/logo_3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/watchlist_guideline_header_edge"
+        app:layout_constraintEnd_toStartOf="@+id/watchlist_guideline_headline_center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,13 +21,44 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="76dp"
         android:fontFamily="@font/concert_one"
-        android:text="Watch List"
-        android:textSize="34sp"
+        android:text="Watchlist"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/watchlist_guideline_header_edge"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/watchlist_guideline_headline_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.55" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/watchlist_guideline_header_edge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.20" />
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefreshlayout_zumba"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/watchlist_guideline_header_edge">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_zumba"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scrollbars="vertical" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
